--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 <h1> Hi Everyone </h1>
+
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=dumdZv1bl2NAsVAZLRYmNIh4ABXDZACHabP8wqfq8rA&cl=ffffff&w=a"></script>
+
