--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <h1> Hi Everyone </h1>
 
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=dumdZv1bl2NAsVAZLRYmNIh4ABXDZACHabP8wqfq8rA&cl=ffffff&w=a"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?5a4bf47a698b4566536e5e3781bb2836";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 
